--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ author:
   location         : "Beijing, China"
   employer         :
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    :  https://scholar.google.com/citations?user=EfZbm40AAAAJ&hl=zh-CN
-  email            :  yang_pu@pku.edu.cn
+  googlescholar    : "https://scholar.google.com/citations?user=EfZbm40AAAAJ&hl=zh-CN"
+  email            : "yang_pu@pku.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : 
+  orcid            : "https://orcid.org/0009-0002-5235-8461"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
